--- a/.github/workflows/cond.yaml
+++ b/.github/workflows/cond.yaml
@@ -23,3 +23,11 @@ jobs:
           COUNT=10
           echo "c1=$COUNT" >> $GITHUB_OUTPUT
   
+  a1:
+    runs-on: ubuntu-latest
+    needs: check
+    if: needs.check.outputs.c1=='true'
+    steps:
+      - name: to be
+        run: |
+          echo "aaa"
