--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,20 @@ name: CI
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      yes:
+        description: 'Perform incremental build'
+        required: true
+        default: false
+        type: boolean
+
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
+
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
