--- a/.github/workflows/cond.yaml
+++ b/.github/workflows/cond.yaml
@@ -14,10 +14,10 @@ jobs:
   check:
     runs-on: ubuntu-latest
     outputs:
-      c1: steps.c1.outputs.c1>0 || input.aaa=='false'
+      c1: steps.c1.outputs.c1>0 || inputs.aaa=='false'
     steps: 
       - name: check
-        if: input.aaa == 'true'
+        if: inputs.aaa == 'true'
         id: c1
         run: |
           COUNT=10
