--- a/.github/workflows/cond.yaml
+++ b/.github/workflows/cond.yaml
@@ -14,7 +14,8 @@ jobs:
   check:
     runs-on: ubuntu-latest
     outputs:
-      c1: steps.c1.outputs.c1>0 || inputs.aaa=='false'
+      c1: inputs.aaa=='false'
+      # c1: steps.c1.outputs.c1>0 || inputs.aaa=='false'
     steps: 
       - name: check
         if: inputs.aaa == 'true'
@@ -22,11 +23,11 @@ jobs:
         run: |
           COUNT=10
           echo "c1=$COUNT" >> $GITHUB_OUTPUT
-  
+      
   a1:
     runs-on: ubuntu-latest
     needs: check
-    if: needs.check.outputs.c1=='true'
+    if: needs.check.outputs.c1=='true' || inputs.aaa=='false'
     steps:
       - name: to be
         run: |
