--- a/.github/workflows/cond.yaml
+++ b/.github/workflows/cond.yaml
@@ -27,8 +27,8 @@ jobs:
   a1:
     runs-on: ubuntu-latest
     needs: check
-    if: needs.check.outputs.c1=='true' || inputs.aaa=='false'
+    # if: needs.check.outputs.c1=='true' || inputs.aaa=='false'
     steps:
       - name: to be
         run: |
-          echo "aaa"
+          echo "aaa ${{needs.check.outputs.c1}}"
