--- a/.github/workflows/cond.yaml
+++ b/.github/workflows/cond.yaml
@@ -14,7 +14,7 @@ jobs:
   check:
     runs-on: ubuntu-latest
     outputs:
-      c1: inputs.aaa=='false'
+      c1: ${{inputs.aaa=='false'}}
       # c1: steps.c1.outputs.c1>0 || inputs.aaa=='false'
     steps: 
       - name: check
