--- a/.github/workflows/cond.yaml
+++ b/.github/workflows/cond.yaml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: check
     # if: needs.check.outputs.c1 || !inputs.aaa
-    if: needs.check.outputs.c1
+    if: ${{needs.check.outputs.c1=='true'}}
     steps:
       - name: to be
         run: |
